--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "react-scripts start",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "react-script build"
+    "test": "react-scripts test",
+    "build": "react-scripts build"
   },
   "repository": {
     "type": "git",
@@ -18,7 +18,7 @@
   "bugs": {
     "url": "https://github.com/mommodabeast/to_do_list/issues"
   },
-  "homepage": "https://github.com/mommodabeast/to_do_list#readme",
+  "homepage": ".",
   "dependencies": {
     "@testing-library/react": "^14.0.0",
     "file-saver": "^2.0.5",
@@ -40,6 +40,8 @@
     ]
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^5.16.5"
+    "@testing-library/jest-dom": "^5.16.5",
+    "@types/file-saver": "^2.0.5",
+    "@types/papaparse": "^5.3.7"
   }
 }
